styles(fix): aligned copy button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -153,7 +153,7 @@ button {
   justify-content: center;
   min-width: 50px;
   height: 50px;
-  margin: 15px;
+  margin: 15px 0;
   cursor: pointer;
   outline: none;
   transition: all 0.2s ease-in-out;
